<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_poster"
        android:text="@string/judul_film"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_rilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_judul"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/img_poster"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/rilis_film" />

    <TextView
        android:id="@+id/txt_pemain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/pemain_film" />

    <TextView
        android:id="@+id/txt_kreator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/kreator_film" />

    <TextView
        android:id="@+id/txt_sinopsis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_judul"
        android:layout_marginStart="26dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/img_poster"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem" />

</RelativeLayout>